--- a/Index.html
+++ b/Index.html
@@ -2,32 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Redirect Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Watch Full Video</title>
+
+  <!-- 🛡️ X / Twitter Safe Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Watch Full Video Now">
+  <meta name="twitter:description" content="Click the button to watch the full video. No signup required.">
+  <meta name="twitter:image" content="https://yourdomain.com/preview.jpg">
+  <meta property="og:title" content="Watch Full Video Now">
+  <meta property="og:description" content="Enjoy the full video instantly. Just click and watch.">
+  <meta property="og:image" content="https://yourdomain.com/preview.jpg">
+  <meta property="og:type" content="website">
+
   <style>
     body {
-      margin: 0;
-      background-color: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background-color: #f4f4f4;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 100px;
     }
-
-    img {
-      width: 80%;
-      max-width: 600px;
-      border-radius: 10px;
+    h1 {
+      color: #222;
+      font-size: 32px;
+      margin-bottom: 40px;
+    }
+    .btn {
+      background-color: #007bff;
+      color: #fff;
+      padding: 15px 30px;
+      margin: 15px;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
-<body onclick="redirectUser()">
-  <img src="https://via.placeholder.com/600x400.png?text=Tap+to+Continue" alt="Click to Redirect" />
+<body>
+
+  <h1>WATCH FULL VIDEO</h1>
+
+  <button class="btn" onclick="redirectTo('https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4')">Watch Full Video</button>
+  <button class="btn" onclick="redirectTo('https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4')">Watch Full Video</button>
+  <button class="btn" onclick="redirectTo('https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4')">Watch Full Video</button>
 
   <script>
-    function redirectUser() {
-      window.location.href = "https://otieu.com/4/9447183";
+    function redirectTo(url) {
+      window.location.href = url;
     }
   </script>
+
 </body>
 </html>
