--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Watch Full Video</title>
 
-  <!-- 🛡️ X / Twitter Safe Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Watch Full Video Now">
-  <meta name="twitter:description" content="Click the button to watch the full video. No signup required.">
-  <meta name="twitter:image" content="https://yourdomain.com/preview.jpg">
-  <meta property="og:title" content="Watch Full Video Now">
-  <meta property="og:description" content="Enjoy the full video instantly. Just click and watch.">
-  <meta property="og:image" content="https://yourdomain.com/preview.jpg">
-  <meta property="og:type" content="website">
+  <!-- 🛡️ Twitter / X Safe Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Watch Full Video Now" />
+  <meta name="twitter:description" content="Click to watch the full video instantly!" />
+  <meta name="twitter:image" content="https://yourdomain.com/preview.jpg" />
+  <meta property="og:title" content="Watch Full Video Now" />
+  <meta property="og:description" content="Click and watch the full video — no login needed." />
+  <meta property="og:image" content="https://yourdomain.com/preview.jpg" />
+  <meta property="og:type" content="website" />
+  <meta name="robots" content="index, follow">
 
   <style>
     body {
-      background-color: #f4f4f4;
-      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
       padding-top: 100px;
     }
     h1 {
-      color: #222;
       font-size: 32px;
+      color: #333;
       margin-bottom: 40px;
     }
     .btn {
       background-color: #007bff;
-      color: #fff;
+      color: white;
       padding: 15px 30px;
       margin: 15px;
-      border: none;
-      border-radius: 8px;
       font-size: 18px;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background 0.3s ease;
     }
     .btn:hover {
       background-color: #0056b3;
@@ -44,18 +45,25 @@
   </style>
 </head>
 <body>
-
   <h1>WATCH FULL VIDEO</h1>
 
-  <button class="btn" onclick="redirectTo('https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4')">Watch Full Video</button>
-  <button class="btn" onclick="redirectTo('https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4')">Watch Full Video</button>
-  <button class="btn" onclick="redirectTo('https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4')">Watch Full Video</button>
+  <!-- 🔗 All buttons use the same link -->
+  <button class="btn" onclick="openInBrowser()">Watch Full Video</button>
+  <button class="btn" onclick="openInBrowser()">Watch Full Video</button>
+  <button class="btn" onclick="openInBrowser()">Watch Full Video</button>
 
   <script>
-    function redirectTo(url) {
-      window.location.href = url;
+    // 🚀 Force open in phone browser
+    function openInBrowser() {
+      const url = "https://illusiongaietytedious.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4";
+
+      // Try to break out of Twitter/X in-app browser
+      const anchor = document.createElement("a");
+      anchor.href = url;
+      anchor.target = "_blank";
+      anchor.rel = "noopener noreferrer";
+      anchor.click();
     }
   </script>
-
 </body>
 </html>
