--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script>
     // 🚀 Force open in phone browser
     function openInBrowser() {
-      const url = "https://otieu.com/4/9454205";
+      const url = "https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4";
 
       // Try to break out of Twitter/X in-app browser
       const anchor = document.createElement("a");
