--- a/index.html
+++ b/index.html
@@ -2,68 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Watch Full Video</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- 🛡️ Twitter / X Safe Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Watch Full Video Now" />
-  <meta name="twitter:description" content="Click to watch the full video instantly!" />
-  <meta name="twitter:image" content="https://yourdomain.com/preview.jpg" />
-  <meta property="og:title" content="Watch Full Video Now" />
-  <meta property="og:description" content="Click and watch the full video — no login needed." />
-  <meta property="og:image" content="https://yourdomain.com/preview.jpg" />
+  <title>Redirecting...</title>
+
+  <!-- ✅ Replace the content of these meta tags with your details -->
+
+  <!-- Open Graph tags for Facebook and other platforms -->
+  <meta property="og:title" content="Check this out!" />
+  <meta property="og:description" content="Click to see something amazing!" />
+  <meta property="og:image" content="https://YOUR-IMAGE-URL-HERE.jpg" />
+  <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app/" />
   <meta property="og:type" content="website" />
-  <meta name="robots" content="index, follow">
+
+  <!-- Twitter Card tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Check this out!" />
+  <meta name="twitter:description" content="Click to see something amazing!" />
+  <meta name="twitter:image" content="https://YOUR-IMAGE-URL-HERE.jpg" />
 
   <style>
     body {
-      background-color: #f9f9f9;
-      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #fff;
+      font-family: sans-serif;
+    }
+    .message {
       text-align: center;
-      padding-top: 100px;
-    }
-    h1 {
-      font-size: 32px;
-      color: #333;
-      margin-bottom: 40px;
-    }
-    .btn {
-      background-color: #007bff;
-      color: white;
-      padding: 15px 30px;
-      margin: 15px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .btn:hover {
-      background-color: #0056b3;
     }
   </style>
-</head>
-<body>
-  <h1>WATCH FULL VIDEO</h1>
-
-  <!-- 🔗 All buttons use the same link -->
-  <button class="btn" onclick="openInBrowser()">Watch Full Video</button>
-  <button class="btn" onclick="openInBrowser()">Watch Full Video</button>
-  <button class="btn" onclick="openInBrowser()">Watch Full Video</button>
 
   <script>
-    // 🚀 Force open in phone browser
-    function openInBrowser() {
-      const url = "https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4";
-
-      // Try to break out of Twitter/X in-app browser
-      const anchor = document.createElement("a");
-      anchor.href = url;
-      anchor.target = "_blank";
-      anchor.rel = "noopener noreferrer";
-      anchor.click();
-    }
+    // Redirect as fast as possible
+    window.location.replace("https://respiratorimitationdetestable.com/cw3q6d2j6?key=810ace7233e676cbcaa27b61fe00e769");
   </script>
+</head>
+<body>
+  <div class="message">
+    <h1>Redirecting...</h1>
+    <p>If you are not redirected automatically, <a href="https://respiratorimitationdetestable.com/cw3q6d2j6?key=810ace7233e676cbcaa27b61fe00e769">click here</a>.</p>
+  </div>
 </body>
 </html>
