--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
   <script>
     // Redirect as fast as possible
-    window.location.replace("https://respiratorimitationdetestable.com/cw3q6d2j6?key=810ace7233e676cbcaa27b61fe00e769");
+    window.location.replace("https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4");
   </script>
 </head>
 <body>
   <div class="message">
     <h1>Redirecting...</h1>
-    <p>If you are not redirected automatically, <a href="https://respiratorimitationdetestable.com/cw3q6d2j6?key=810ace7233e676cbcaa27b61fe00e769">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4">click here</a>.</p>
   </div>
 </body>
 </html>
