--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Open Graph tags for Facebook and other platforms -->
   <meta property="og:title" content="Check this out!" />
   <meta property="og:description" content="Click to see something amazing!" />
-  <meta property="og:image" content="https://YOUR-IMAGE-URL-HERE.jpg" />
+  <meta property="og:image" content="YOUR-IMAGE-URL-HERE.jpg" />
   <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app/" />
   <meta property="og:type" content="website" />
 
@@ -19,7 +19,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Check this out!" />
   <meta name="twitter:description" content="Click to see something amazing!" />
-  <meta name="twitter:image" content="https://YOUR-IMAGE-URL-HERE.jpg" />
+  <meta name="twitter:image" content="YOUR-IMAGE-URL-HERE.jpg" />
 
   <style>
     body {
