--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Redirecting...</title>
 
-  <!-- ✅ Replace the content of these meta tags with your details -->
+  <!-- ✅ Replace these meta contents with your real info -->
 
-  <!-- Open Graph tags for Facebook and other platforms -->
+  <!-- Open Graph meta tags (for Facebook etc.) -->
   <meta property="og:title" content="Check this out!" />
   <meta property="og:description" content="Click to see something amazing!" />
-  <meta property="og:image" content="YOUR-IMAGE-URL-HERE.jpg" />
-  <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app/" />
+  <meta property="og:image" content="https://sheerazali5.blogspot.com/2025/06/blog-post.html" />
+  <meta property="og:url" content="https://sheerazali5.blogspot.com/2025/06/blog-post.html" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card tags -->
+  <!-- Twitter Card meta tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Check this out!" />
   <meta name="twitter:description" content="Click to see something amazing!" />
-  <meta name="twitter:image" content="YOUR-IMAGE-URL-HERE.jpg" />
+  <meta name="twitter:image" content="https://sheerazali5.blogspot.com/2025/06/blog-post.html" />
+
+  <!-- Optional: force Twitter to re-fetch your image -->
+  <meta name="twitter:image:alt" content="Preview image with play icon" />
 
   <style>
     body {
@@ -38,7 +40,6 @@
   </style>
 
   <script>
-    // Redirect as fast as possible
     window.location.replace("https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4");
   </script>
 </head>
