--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <!-- Open Graph meta tags (for Facebook etc.) -->
   <meta property="og:title" content="Check this out!" />
   <meta property="og:description" content="Click to see something amazing!" />
-  <meta property="og:image" content="https://sheerazali5.blogspot.com/2025/06/blog-post.html" />
-  <meta property="og:url" content="https://sheerazali5.blogspot.com/2025/06/blog-post.html" />
+  <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
+  <meta property="og:url" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card meta tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Check this out!" />
   <meta name="twitter:description" content="Click to see something amazing!" />
-  <meta name="twitter:image" content="https://sheerazali5.blogspot.com/2025/06/blog-post.html" />
+  <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
 
   <!-- Optional: force Twitter to re-fetch your image -->
   <meta name="twitter:image:alt" content="Preview image with play icon" />
