--- a/index.html
+++ b/index.html
@@ -5,37 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redirecting...</title>
 
-  <!-- ✅ Replace these meta contents with your real info -->
-
-  <!-- Open Graph meta tags (for Facebook etc.) -->
+  <!-- ✅ Open Graph meta tags (for Facebook, X/Twitter previews) -->
   <meta property="og:title" content="Check this out!" />
   <meta property="og:description" content="Click to see something amazing!" />
   <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
-  <meta property="og:url" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
+  <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card meta tags -->
+  <!-- ✅ Twitter Card meta tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Check this out!" />
   <meta name="twitter:description" content="Click to see something amazing!" />
   <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
 
-  <!-- Optional: force Twitter to re-fetch your image -->
-  <meta name="twitter:image:alt" content="Preview image with play icon" />
-
   <style>
     body {
       margin: 0;
       background: #000;
+      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      color: #fff;
       font-family: sans-serif;
     }
     .message {
       text-align: center;
+    }
+    a {
+      color: #0af;
     }
   </style>
 
@@ -46,7 +44,11 @@
 <body>
   <div class="message">
     <h1>Redirecting...</h1>
-    <p>If you are not redirected automatically, <a href="https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4">click here</a>.</p>
+    <p>If you are not redirected, 
+      <a href="https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4">
+        click here
+      </a>.
+    </p>
   </div>
 </body>
 </html>
