--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Redirecting...</title>
+  <meta charset="UTF-8">
+  <title>Check this out!</title>
 
-  <!-- ✅ Open Graph meta tags (for Facebook, X/Twitter previews) -->
-  <meta property="og:title" content="Check this out!" />
-  <meta property="og:description" content="Click to see something amazing!" />
-  <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
-  <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app/" />
-  <meta property="og:type" content="website" />
+  <!-- Twitter Card tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Check this out!">
+  <meta name="twitter:description" content="Click to see something amazing!">
+  <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png">
 
-  <!-- ✅ Twitter Card meta tags -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Check this out!" />
-  <meta name="twitter:description" content="Click to see something amazing!" />
-  <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png" />
+  <!-- Open Graph tags (also useful for Twitter) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Check this out!">
+  <meta property="og:description" content="Click to see something amazing!">
+  <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihzdyUcJBXJhliyXIJTp7tMrTX058gR4YyQRl2PDJS7_g5Z29_Dai3G0eSbiafV6TquekY4FLATNTihLhPdgg-qEvMhVVn2Ysp-waSxG2qkntOVapDKw51R6TC9STTp8GOJePsZIXqb1EzHRo7bbfSevA1746SU9jA81vcpR91Gu4XiqOR-W14v8qCd6kE/s892/1000263357.png">
+  <meta property="og:url" content="YOUR-REDIRECT-PAGE-URL-HERE">
+
+  <meta http-equiv="refresh" content="0; url=https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4">
 
   <style>
     body {
-      margin: 0;
       background: #000;
       color: #fff;
       display: flex;
@@ -29,22 +29,15 @@
       height: 100vh;
       font-family: sans-serif;
     }
-    .message {
-      text-align: center;
-    }
     a {
       color: #0af;
     }
   </style>
-
-  <script>
-    window.location.replace("https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4");
-  </script>
 </head>
 <body>
-  <div class="message">
+  <div>
     <h1>Redirecting...</h1>
-    <p>If you are not redirected, 
+    <p>If you’re not redirected, 
       <a href="https://respiratorimitationdetestable.com/p5khyjpeq?key=1b56be4a72dbc8bc92064ffa3fe898c4">
         click here
       </a>.
